--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 </span> -->
 
                                 <span class="link-block">
-                                    <a target="_blank" href="paper.pdf"
+                                    <a target="_blank" href="assets/dreureka-paper.pdf"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
