--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                         </span>
                                         <span><b>PDF</b></span>
                                     </a>
-                                    <a target="_blank" href=""
+                                    <a target="_blank" href="https://github.com/eureka-research/DrEureka"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
