--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <a target="_blank"
                                     href="https://www.linkedin.com/in/hungju-wang">Hungju&#160;Wang</a><sup>1</sup>,
                                     <a target="_blank"
-                                    href="https://www.linkedin.com/in/hungju-wang">Sam&#160;Wang</a><sup>1</sup>,
+                                    href="https://www.linkedin.com/in/sam-wang-penn/">Sam&#160;Wang</a><sup>1</sup>,
                                 <br>
                                 <a target="_blank" href="https://www.cs.utexas.edu/~yukez/">Yuke&#160;Zhu</a><sup>2,3</sup>,
                                 <a target="_blank" href="https://jimfan.me/">Linxi&#160;"Jim"&#160;Fan</a><sup>2</sup>,
