--- a/index.html
+++ b/index.html
@@ -536,8 +536,8 @@
         <h2 class="title">BibTeX</h2>
         <pre><code>@article{ma2024dreureka,
     title   = {DrEureka: Language Model Guided Sim-To-Real Transfer},
-    author  = {Yecheng Jason Ma and William Liang and Hungju Wang and Sam Wang and Yuke Zhu and Linxi Fan and Osbert Bastani and Dinesh Jayaraman}
-    year    = {2024},
+    author  = {Yecheng Jason Ma and William Liang and Hungju Wang and Sam Wang and Yuke Zhu and Linxi Fan and Osbert Bastani and Dinesh Jayaraman},
+    year    = {2024}
 }
 </code></pre>
     </div>
