--- a/index.html
+++ b/index.html
@@ -537,7 +537,9 @@
         <pre><code>@article{ma2024dreureka,
     title   = {DrEureka: Language Model Guided Sim-To-Real Transfer},
     author  = {Yecheng Jason Ma and William Liang and Hungju Wang and Sam Wang and Yuke Zhu and Linxi Fan and Osbert Bastani and Dinesh Jayaraman},
-    year    = {2024}
+    year    = {2024},
+  booktitle = {Robotics: Science and Systems (RSS)}
+
 }
 </code></pre>
     </div>
