--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                     <div class="column has-text-centered">
                         <h1 class="title is-1 publication-title">DrEureka: <br>
                             Language Model Guided Sim-To-Real Transfer</h1>
-
                         <div class="is-size-5 publication-authors">
                             <span class="author-block">
                                 <a target="_blank" href="https://jasonma2016.github.io/">
@@ -93,7 +92,9 @@
                                 Corresponding authors: jasonyma@seas.upenn.edu, wjhliang@seas.upenn.edu
                             </span>
                             </div>
-
+                        <div class="is-size-5 publication-authors">
+                            <span class="author-block">Robotics: Science and Systems (RSS) 2024</span>
+                            </div>
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                 <!-- TODO REPLACE ALL LINKS -->
