Add arxiv and edit citation.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
                                 </span> -->
 
                                 <span class="link-block">
+                                    <a target="_blank" href="https://arxiv.org/abs/2406.01967"
+                                        class="external-link button is-normal is-rounded is-dark">
+                                        <span class="icon">
+                                            <i class="ai ai-arxiv"></i>
+                                        </span>
+                                        <span><b>arxiv</b></span>
+                                    </a>
                                     <a target="_blank" href="assets/dreureka-paper.pdf"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
@@ -535,7 +542,7 @@
 <section class="section" id="BibTeX">
     <div class="container is-max-widescreen content">
         <h2 class="title">BibTeX</h2>
-        <pre><code>@article{ma2024dreureka,
+        <pre><code>@inproceedings{ma2024dreureka,
     title   = {DrEureka: Language Model Guided Sim-To-Real Transfer},
     author  = {Yecheng Jason Ma and William Liang and Hungju Wang and Sam Wang and Yuke Zhu and Linxi Fan and Osbert Bastani and Dinesh Jayaraman},
     year    = {2024},
